添加自定义按钮

--- a/lib/style/vueWangeditorBlock.less
+++ b/lib/style/vueWangeditorBlock.less
@@ -4,9 +4,16 @@
 */
 /*
  * @LastEditors: afei
- * @LastEditTime: 2020-12-31 15:40:39
+ * @LastEditTime: 2021-01-04 14:49:15
 */
 .vue-wangeditor-block{
+    .w-e-toolbar {
+        .w-e-active{
+            button{
+                color: #1e88e5;
+            }
+        } 
+    }
     .w-e-text{
         ul{
             list-style: disc;
