--- a/lib/style/vueWangeditorBlock.css
+++ b/lib/style/vueWangeditorBlock.css
@@ -4,8 +4,11 @@
 */
 /*
  * @LastEditors: afei
- * @LastEditTime: 2020-12-31 15:40:39
+ * @LastEditTime: 2021-01-04 14:49:15
 */
+.vue-wangeditor-block .w-e-toolbar .w-e-active button {
+  color: #1e88e5;
+}
 .vue-wangeditor-block .w-e-text ul {
   list-style: disc;
 }
