--- a/lib/style/vueWangeditorBlock.less
+++ b/lib/style/vueWangeditorBlock.less
@@ -4,15 +4,19 @@
 */
 /*
  * @LastEditors: afei
- * @LastEditTime: 2021-01-04 14:49:15
+ * @LastEditTime: 2021-01-13 11:02:46
 */
 .vue-wangeditor-block{
     .w-e-toolbar {
+        z-index: 11 !important;
         .w-e-active{
             button{
                 color: #1e88e5;
             }
         } 
+    }
+    .w-e-text-container{
+        z-index: 10 !important;
     }
     .w-e-text{
         ul{
@@ -43,6 +47,9 @@
             &:hover{
                 text-decoration: underline;
             }
+        }
+        &.full{
+            padding: 0;
         }
     }
 }
