--- a/lib/style/vueWangeditorBlock.less
+++ b/lib/style/vueWangeditorBlock.less
@@ -4,7 +4,7 @@
 */
 /*
  * @LastEditors: afei
- * @LastEditTime: 2021-01-13 11:02:46
+ * @LastEditTime: 2021-01-13 13:59:01
 */
 .vue-wangeditor-block{
     .w-e-toolbar {
@@ -50,6 +50,7 @@
         }
         &.full{
             padding: 0;
+            height: 100%;
         }
     }
 }
