--- a/lib/style/vueWangeditorBlock.css
+++ b/lib/style/vueWangeditorBlock.css
@@ -4,7 +4,7 @@
 */
 /*
  * @LastEditors: afei
- * @LastEditTime: 2021-01-13 11:02:46
+ * @LastEditTime: 2021-01-13 13:59:01
 */
 .vue-wangeditor-block .w-e-toolbar {
   z-index: 11 !important;
@@ -48,4 +48,5 @@
 }
 .vue-wangeditor-block .w-e-text.full {
   padding: 0;
+  height: 100%;
 }
